--- a/LockView/app/build.gradle
+++ b/LockView/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+
+    compile 'com.google.android.gms:play-services:7.5.0'
+
 }
