--- a/LockView/app/src/main/AndroidManifest.xml
+++ b/LockView/app/src/main/AndroidManifest.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.github.johnfeng.lockview" >
+<manifest package="io.github.johnfeng.lockview"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+    <!-- Google Analytics required permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- Optional permission for reliable local dispatching on non-Google Play devices -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,5 +27,39 @@
             </intent-filter>
         </activity>
     </application>
+
+    <!-- Add the following meta-data for devices running Google Play service. -->
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version"
+        />
+
+    <!-- Optionally, register AnalyticsReceiver and AnalyticsService to support background
+        dispatching on non-Google Play devices -->
+    <receiver
+        android:name="com.google.android.gms.analytics.AnalyticsReceiver"
+        android:enabled="true"
+        >
+        <intent-filter>
+            <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
+        </intent-filter>
+    </receiver>
+    <service
+        android:name="com.google.android.gms.analytics.AnalyticsService"
+        android:enabled="true"
+        android:exported="false"
+        />
+
+    <!-- Optionally, register CampaignTrackingReceiver and CampaignTrackingService to enable
+         installation campaign reporting -->
+    <receiver
+        android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
+        android:exported="true"
+        >
+        <intent-filter>
+            <action android:name="com.android.vending.INSTALL_REFERRER" />
+        </intent-filter>
+    </receiver>
+    <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
 
 </manifest>
