--- a/LockView/app/src/main/AndroidManifest.xml
+++ b/LockView/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.github.johnfeng.lockview"
+<manifest
+    package="io.github.johnfeng.lockview"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
