--- a/LockView/.gitignore
+++ b/LockView/.gitignore
@@ -45,9 +45,9 @@ gen-external-apklibs
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
+ .idea/workspace.xml
+ .idea/tasks.xml
+ .idea/dictionaries
 
 # Sensitive or high-churn files:
 # .idea/dataSources.ids
@@ -57,8 +57,8 @@ gen-external-apklibs
 # .idea/uiDesigner.xml
 
 # Gradle:
-# .idea/gradle.xml
-# .idea/libraries
+ .idea/gradle.xml
+ .idea/libraries
 
 # Mongo Explorer plugin:
 # .idea/mongoSettings.xml
